src/objects/LeanData__LD_Member__c.object
<CustomObject>
    <fields>
        <fullName>LeanData__Holiday_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Holiday Set</label>
        <referenceTo>LeanData__Round_Robin_Schedule_Setting__c</referenceTo>
        <relationshipLabel>Holiday Set</relationshipLabel>
        <relationshipName>Holiday_Set</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Is_Round_Robin_Paused__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Round Robin Routing Paused</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Member_Type__c</fullName>
        <label>Member Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User__c</fullName>
                    <default>true</default>
                    <label>User__c</label>
                </value>
                <value>
                    <fullName>Queue__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeanData__Pausing_Resume_Time__c</fullName>
        <label>LD Member resume time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeanData__TimeZoneSidKey__c</fullName>
        <label>TimeZone Sid Key</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__User_Id__c</fullName>
        <externalId>true</externalId>
        <label>User Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LeanData__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>LD User</relationshipLabel>
        <relationshipName>LD_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Vacations__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vacations</label>
        <referenceTo>LeanData__Round_Robin_Schedule_Setting__c</referenceTo>
        <relationshipLabel>Vacations</relationshipLabel>
        <relationshipName>Vacations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Working_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Working Hours</label>
        <referenceTo>LeanData__Round_Robin_Schedule_Setting__c</referenceTo>
        <relationshipLabel>Working Hour</relationshipLabel>
        <relationshipName>Working_Hour</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>LD Member</label>
    <nameField>
        <label>LD Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LD Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>